--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -7,7 +7,6 @@
 
   @media ($tablet) {
     margin-top: 58px;
-    @include clearfix;
     padding-top: 50px;
     padding-bottom: 10px;
   }
@@ -18,6 +17,7 @@
 }
 
 .main-footer__container {
+  display: flex;
   @include container;
 }
 
@@ -28,7 +28,6 @@
     display: block;
     //width: 160px;
     width: 33%;
-    float: left;
   }
 }
 
@@ -36,10 +35,8 @@
   text-align: center;
 
   @media ($tablet) {
-    display: block;
     //width: 197px;
     width: 33%;
-    float: left;
     text-align: right;
   }
 }
