--- a/sass/blocks/catalog.scss
+++ b/sass/blocks/catalog.scss
@@ -15,4 +15,10 @@
 
 .catalog__container {
   @include container;
+  display: flex;
+  flex-direction: column;
+
+  @media ($desktop) {
+    flex-direction: row;
+  }
 }
