--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -18,7 +18,14 @@
 
 .main-footer__container {
   display: flex;
+
+  flex-direction: column;
+
   @include container;
+
+  @media ($tablet) {
+    flex-direction: row;
+  }
 }
 
 .main-footer__logo {
