--- a/sass/blocks/catalog-item.scss
+++ b/sass/blocks/catalog-item.scss
@@ -12,8 +12,10 @@
 
   @media ($desktop) {
     flex-direction: column;
+    margin-bottom: 0;
     width: 315px;
     margin-right: 51px;
+    padding-bottom: 30px;
 
     border: 0;
 
@@ -75,7 +77,7 @@
 
   @media ($desktop) {
     width: 253px;
-
+    flex-grow: 1;
     border: 1px solid #ededed;
   }
 }
@@ -88,9 +90,6 @@
   @media ($tablet) {
     width: auto;
     padding-top: 0;
-  }
-
-  @media ($desktop) {
   }
 }
 
@@ -109,9 +108,6 @@
     width: auto;
     margin: 0;
     margin-top: auto;
-  }
-
-  @media ($desktop) {
   }
 }
 
