--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -62,8 +62,15 @@
   color: $color-text-title;
 
   @media ($tablet) {
-    padding-top: 100px;
+    font-size: 43px;
+    line-height: 50px;
+    padding-top: 50px;
     padding-bottom: 80px;
+  }
+
+  @media ($desktop) {
+    font-size: 53px;
+    line-height: 57px;
   }
 }
 
