--- a/sass/blocks/order.scss
+++ b/sass/blocks/order.scss
@@ -10,4 +10,13 @@
   margin: 0;
 
   font-size: 13px;
+
+  @media ($tablet) {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 17px;
+    line-height: 30px;
+    margin-top: 70px;
+  }
 }
