--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -28,6 +28,10 @@
     background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 85px, #e7e7e7 85px, #e7e7e7 86px, #f9f9f9 86px,  #f9f9f9 100%);
     padding-top: 0;
     border-bottom: 0;
+
+    &--gray {
+      background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 85px, #e7e7e7 85px, #e7e7e7 86px, #f1f1f1 86px,  #f1f1f1 100%);
+    }
   }
 }
 
