--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -7,10 +7,16 @@
   padding: 0;
   margin-bottom: 30px;
   border: 0;
+  border-top: 1px solid $color-cyan;
 }
 
 .order-form__title {
   @include form-title;
+  padding-right: 25px;
+}
+
+.order-form__line {
+  margin-bottom: 30px;
 }
 
 .order-form__radio {
@@ -22,18 +28,87 @@
 }
 
 .order-form__label {
+  position: relative;
+
   padding-left: 62px;
   font-size: 17px;
   line-height: 18px;
   color: $color-text-title;
   font-weight: bold;
   display: block;
+  vertical-align: middle;
 
   &--f-name,
   &--s-name,
   &--father-name {
     padding-left: 0;
   }
+
+  &--radio {
+    padding-top: 15px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 38px;
+      height: 38px;
+      content: "";
+      display: block;
+      border-radius: 50%;
+      border: 2px solid #444444;
+    }
+
+    &::after {
+      position: absolute;
+      top: 13px;
+      left: 13px;
+      width: 16px;
+      height: 16px;
+      content: "";
+      display: block;
+      border-radius: 50%;
+      background-color: $color-cyan;
+      display: none;
+    }
+  }
+
+  &--checkbox {
+    padding-top: 12px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 38px;
+      height: 37px;
+      content: "";
+      display: block;
+      border: 2px solid #444444;
+    }
+
+    &::after {
+      position: absolute;
+      top: 13px;
+      left: 13px;
+      width: 16px;
+      height: 8px;
+      content: "";
+      display: block;
+      border-left: 2px solid #000000;
+      border-bottom: 2px solid #000000;
+      transform: rotate(-45deg);
+      display: none;
+    }
+  }
+}
+
+.order-form__radio:checked ~ .order-form__label::after {
+  display: block;
+}
+
+.order-form__checkbox:checked ~ .order-form__label::after {
+  display: block;
 }
 
 .order-form__text {
@@ -66,7 +141,20 @@
 }
 
 .order-form__caption {
+  display: flex;
   @include form-title;
+
+  &::after {
+    display: block;
+    content: "";
+    margin-left: 25px;
+    width: 50px;
+
+    flex-grow: 1;
+    height: 1px;
+    background-color: $color-cyan;
+    align-self: center;
+  }
 }
 
 .order-form__note {
