--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  padding-top: 32px;
+  padding-top: 68px;
 
   @media ($tablet) {
     margin-bottom: 60px;
@@ -49,26 +49,29 @@
 .features__item {
   position: relative;
 
-  margin-bottom: 35px;
-  padding-top: 50px;
+  margin-bottom: 27px;
+  padding-top: 54px;
 
   font-weight: bold;
   font-size: 17px;
+  line-height: 21px;
   color: $color-text-title;
 
   &::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 10px;
-
     display: block;
   }
 
   &--ecological {
+    padding-right: 65px;
+
     &::after {
       width: 32px;
       height: 37px;
+
+      top: 1px;
+      left: 8px;
 
       background-image: url("../img/icon-feature-1.svg");
       background-repeat: no-repeat;
@@ -76,9 +79,14 @@
   }
 
   &--price {
+    padding-right: 45px;
+
     &::after {
       width: 34px;
       height: 34px;
+
+      top: 5px;
+      left: 4px;
 
       background-image: url("../img/icon-feature-2.svg");
       background-repeat: no-repeat;
@@ -86,9 +94,14 @@
   }
 
   &--likes {
+    padding-right: 48px;
+
     &::after {
       width: 47px;
       height: 27px;
+
+      top: 3px;
+      left: 0px;
 
       background-image: url("../img/icon-feature-3.svg");
       background-repeat: no-repeat;
@@ -100,15 +113,23 @@
       width: 54px;
       height: 23px;
 
+      top: 6px;
+      left: -6px;
+
       background-image: url("../img/icon-feature-4.svg");
       background-repeat: no-repeat;
     }
   }
 
   &--homeland {
+    padding-right: 60px;
+
     &::after {
       width: 33px;
       height: 28px;
+
+      top: 7px;
+      left: 7px;
 
       background-image: url("../img/icon-feature-5.svg");
       background-repeat: no-repeat;
@@ -116,9 +137,14 @@
   }
 
   &--package {
+    padding-right: 45px;
+
     &::after {
       width: 33px;
       height: 33px;
+
+      top: 4px;
+      left: 3px;
 
       background-image: url("../img/icon-feature-6.svg");
       background-repeat: no-repeat;
