--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,7 +1,7 @@
 .main-footer {
   margin-top: 39px;
   padding-top: 30px;
-  padding-bottom: 20px;
+  padding-bottom: 23px;
 
   background-color: $color-background;
 
@@ -49,7 +49,7 @@
 }
 
 .main-footer__copyright-text {
-  margin-right: 30px;
+  margin-right: 19px;
 
   font-weight: bold;
   font-size: 19px;
@@ -61,6 +61,7 @@
   display: inline-block;
   width: 27px;
   height: 34px;
+  margin-top: -3px;
 
   font-size: 0;
   vertical-align: top;
