--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -1,10 +1,10 @@
 .promo {
-  padding-top: 90px;
+  padding-top: 70px;
 
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center -20px;
 
   @media ($tablet) {
     padding-top: 60px;
@@ -15,7 +15,7 @@
   box-sizing: border-box;
   margin: 0;
   margin-right: auto;
-  margin-bottom: 120px;
+  margin-bottom: 122px;
   margin-left: auto;
   padding: 0;
   padding-right: 8px;
@@ -47,7 +47,7 @@
 .promo__link {
   padding-top: 25px;
   padding-right: 30px;
-  padding-bottom: 25px;
+  padding-bottom: 30px;
   padding-left: 30px;
 
   font-weight: bold;
@@ -82,7 +82,8 @@
   &::before {
     content: "";
     position: absolute;
-    right: 0;
+    right: 5px;
+    top: -1px;
 
     opacity: 0.5;
   }
@@ -99,6 +100,9 @@
 
   &--toys {
     &::before {
+      right: -3px;
+      top: -5px;
+
       width: 61px;
       height: 61px;
 
