--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-  padding-top: 20px;
+  padding-top: 28px;
 
   @media ($tablet) {
     margin-bottom: 80px;
@@ -51,7 +51,7 @@
 
 .reviews__title {
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 24px;
 
   font-weight: bold;
   font-size: 25px;
@@ -93,7 +93,7 @@
 
 .reviews__author {
   display: block;
-  margin-top: 20px;
+  margin-top: 26px;
 
   font-weight: bold;
   font-size: 18px;
@@ -114,6 +114,8 @@
 }
 
 .reviews__author-contact {
+  display: inline-block;
+  margin-top: 3px;
   font-weight: normal;
   font-size: 18px;
   line-height: 30px;
@@ -142,7 +144,7 @@
 
 .reviews__btn {
   width: 50%;
-  height: 50px;
+  height: 52px;
 
   background-color: #ffffff;
   border: 1px solid #ececec;
