--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -5,10 +5,14 @@
   padding-top: 86px;
   font-size: 0;
 
+  @media ($tablet) {
+    padding-top: 66px;
+  }
+
   @media ($desktop) {
     flex-wrap: wrap;
     height: 457px;
-    padding-top: 100px;
+    padding-top: 77px;
     @include container;
     align-content: space-between;
   }
@@ -40,15 +44,15 @@
       background-repeat: no-repeat;
       width: 47px;
       height: 82px;
-      top: -10px;
-      right: 0;
+      top: -15px;
+      right: 3px;
     }
   }
 
   @media ($desktop) {
     &:before {
       left: 64px;
-      top: 80px;
+      top: 62px;
     }
   }
 }
@@ -72,7 +76,7 @@
     line-height: 57px;
     padding-left: 175px;
     margin-bottom: 50px;
-    transform: translateY(80px);
+    transform: translateY(71px);
   }
 }
 
@@ -88,7 +92,7 @@
     flex-direction: column;
     padding-left: 175px;
     width: 300px;
-    padding-top: 80px;
+    padding-top: 70px;
     margin-right: 0;
   }
 }
@@ -104,7 +108,7 @@
   }
 
   @media ($desktop) {
-    padding-bottom: 0;
+    padding-bottom: 9px;
     width: 350px;
   }
 }
@@ -118,7 +122,7 @@
   vertical-align: top;
 
   @media ($tablet) {
-    width: 72px;
+    width: 77px;
     font-size: 17px;
   }
 }
@@ -147,6 +151,10 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
+
+  @media ($tablet) {
+    width: 230px;
+  }
 
   @media ($desktop) {
     margin: 0;
