--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -2,7 +2,8 @@
   padding-top: 68px;
 
   @media ($tablet) {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
+    padding-top: 53px;
   }
 }
 
@@ -21,12 +22,14 @@
 
   @media ($tablet) {
     margin-top: 65px;
+    margin-bottom: 48px;
 
     font-size: 43px;
     line-height: 50px;
   }
 
   @media ($desktop) {
+    margin-top: 102px;
     font-size: 53px;
     line-height: 57px;
     padding-left: 170px;
@@ -39,6 +42,11 @@
 
   list-style-type: none;
   font-size: 0;
+
+  @media ($tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   @media ($desktop) {
     padding-right: 175px;
@@ -65,6 +73,7 @@
 
   &--ecological {
     padding-right: 65px;
+    order: 1;
 
     &::after {
       width: 32px;
@@ -80,21 +89,7 @@
 
   &--price {
     padding-right: 45px;
-
-    &::after {
-      width: 34px;
-      height: 34px;
-
-      top: 5px;
-      left: 4px;
-
-      background-image: url("../img/icon-feature-2.svg");
-      background-repeat: no-repeat;
-    }
-  }
-
-  &--likes {
-    padding-right: 48px;
+    order: 3;
 
     &::after {
       width: 47px;
@@ -108,21 +103,9 @@
     }
   }
 
-  &--love {
-    &::after {
-      width: 54px;
-      height: 23px;
-
-      top: 6px;
-      left: -6px;
-
-      background-image: url("../img/icon-feature-4.svg");
-      background-repeat: no-repeat;
-    }
-  }
-
-  &--homeland {
+  &--likes {
     padding-right: 60px;
+    order: 5;
 
     &::after {
       width: 33px;
@@ -136,8 +119,41 @@
     }
   }
 
+  &--love {
+    padding-right: 45px;
+    order: 2;
+
+    &::after {
+      width: 34px;
+      height: 34px;
+
+      top: 5px;
+      left: 4px;
+
+      background-image: url("../img/icon-feature-2.svg");
+      background-repeat: no-repeat;
+    }
+  }
+
+  &--homeland {
+    padding-right: 5px;
+    order: 4;
+
+    &::after {
+      width: 54px;
+      height: 23px;
+
+      top: 6px;
+      left: -6px;
+
+      background-image: url("../img/icon-feature-4.svg");
+      background-repeat: no-repeat;
+    }
+  }
+
   &--package {
     padding-right: 45px;
+    order: 6;
 
     &::after {
       width: 33px;
@@ -152,9 +168,48 @@
   }
 
   @media ($tablet) {
-    display: inline-block;
+    font-size: 20px;
+    line-height: 24px;
+    box-sizing: border-box;
     width: 334px;
+    margin-bottom: 52px;
 
     font-size: 20px;
+
+    &--ecological {
+      padding-right: 105px;
+    }
+
+    &--price {
+      padding-right: 75px;
+    }
+
+    &--likes {
+      padding-right: 95px;
+    }
+  }
+
+  @media ($desktop) {
+    width: 350px;
+
+    &--ecological {
+      padding-right: 125px;
+    }
+
+    &--price {
+      padding-right: 90px;
+    }
+
+    &--likes {
+      padding-right: 110px;
+    }
+
+    &--love {
+      padding-right: 55px;
+    }
+
+    &--package {
+      padding-right: 60px;
+    }
   }
 }
