--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -2,8 +2,14 @@
   margin-bottom: 38px;
   margin-top: 7px;
 
+  @media ($tablet) {
+    margin-top: 25px;
+    margin-bottom: 55px;
+  }
+
   @media ($desktop) {
     order: 1;
+    margin-top: 0;
   }
 }
 
