--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -7,7 +7,12 @@
   background-position: center -20px;
 
   @media ($tablet) {
-    padding-top: 60px;
+    padding-top: 97px;
+    background-size: cover;
+  }
+
+  @media ($desktop) {
+    background-position: center -80px;
   }
 }
 
@@ -28,8 +33,15 @@
   color: $color-text-title;
 
   @media ($tablet) {
+    margin-bottom: 373px;
     font-size: 43px;
     line-height: 50px;
+  }
+
+  @media ($desktop) {
+    font-size: 53px;
+    line-height: 57px;
+    margin-bottom: 359px;
   }
 }
 
@@ -52,6 +64,7 @@
 
   font-weight: bold;
   font-size: 19px;
+  line-height: 24px;
   color: #ffffff;
   text-decoration: none;;
 
@@ -64,11 +77,13 @@
   }
 
   @media ($tablet) {
+    line-height: 30px;
+    padding-left: 36px;
     box-sizing: border-box;
     font-size: 19px;
     width: 50%;
     padding-bottom: 38px;
-    padding-top: 30px;
+    padding-top: 28px;
   }
 }
 
@@ -113,5 +128,18 @@
 
   @media ($tablet) {
     width: auto;
+
+    &--interior {
+      &::before {
+        top: 1px;
+      }
+    }
+
+    &--toys {
+      &::before {
+        right: 3px;
+        top: 3px;
+      }
+    }
   }
 }
