--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -3,7 +3,7 @@
 
   @media ($tablet) {
     margin-bottom: 80px;
-    padding-top: 60px;
+    padding-top: 78px;
 
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
@@ -13,6 +13,7 @@
 
   @media ($desktop) {
     background: none;
+    padding-top: 7px;
   }
 }
 
@@ -31,7 +32,7 @@
   }
 
   @media ($desktop) {
-    padding-top: 80px;
+    padding-top: 70px;
     padding-left: 175px;
     width: 875px;
 
@@ -45,7 +46,7 @@
 .reviews__items {
   @media ($tablet) {
     order: 2;
-    margin-top: 50px;
+    margin-top: 46px;
   }
 }
 
@@ -102,7 +103,8 @@
 
   @media ($tablet) {
     order: 3;
-    padding-bottom: 50px;
+    padding-bottom: 46px;
+    margin-top: 58px;
 
     font-size: 17px;
   }
@@ -110,6 +112,7 @@
   @media ($desktop) {
     flex-basis: 350px;
     padding-bottom: 100px;
+    margin-top: 36px;
   }
 }
 
@@ -133,12 +136,14 @@
 
   @media ($tablet) {
     order: 4;
+    margin-right: 5px;
+    margin-top: 60px;
 
     width: 167px;
   }
 
   @media ($desktop) {
-    bottom: 60px;
+    margin-top: 39px;
   }
 }
 
@@ -175,6 +180,6 @@
   }
 
   @media ($desktop) {
-    top: 80px;
+    margin-top: 10px;
   }
 }
