--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,6 +1,4 @@
 .production {
-  padding-top: 25px;
-
   @media ($desktop) {
     padding-bottom: 40px;
   }
@@ -35,6 +33,8 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  border: 1px solid #ececec;
+  padding-top: 18px;
 
   @include container;
 
@@ -68,6 +68,20 @@
   font-size: 17px;
   line-height: 24px;
   color: $color-text-title;
+  padding-left: 90px;
+  margin-bottom: 24px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    top: 6px;
+    left: 34px;
+
+    background-image: url("../img/icon-video.svg");
+    background-repeat: no-repeat;
+  }
 
   @media ($tablet) {
     margin-bottom: 30px;
@@ -78,17 +92,8 @@
     line-height: 24px;
 
     &::before {
-      content: "";
-      position: absolute;
       bottom: 0;
       left: 40px;
-
-      display: block;
-      width: 32px;
-      height: 32px;
-
-      background-image: url("../img/icon-video.svg");
-      background-repeat: no-repeat;
     }
   }
 
@@ -107,7 +112,12 @@
 }
 
 .production__description {
+  padding-left: 34px;
+  padding-right: 34px;
   font-size: 13px;
+  margin: 0;
+  margin-top: 27px;
+  margin-bottom: 25px;
 
   @media ($tablet) {
     margin-bottom: 30px;
@@ -127,6 +137,10 @@
 }
 
 .production__order {
+  width: 190px;
+  margin: 0 auto;
+  margin-bottom: 33px;
+
   @media ($tablet) {
     width: 586px;
     margin-right: 42px;
