--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -18,13 +18,45 @@
     display: flex;
     align-items: baseline;
 
+    &--category {
+      @include container;
+    }
+
     &--color {
+      padding-bottom: 49px;
       padding-top: 27px;
+      background-color: #f1f1f1;
+      margin-bottom: 20px;
+    }
+
+    &--name {
+      @include container;
+    }
+
+    &:last-of-type {
+      margin-bottom: 26px;
     }
   }
 
   @media ($desktop) {
     padding-left: 60px;
+  }
+}
+
+.order-form__inner {
+  @media ($tablet) {
+    margin: 0;
+    display: flex;
+    align-items: baseline;
+    @include container;
+
+    &--space-top {
+      padding-top: 50px;
+    }
+
+    &--space-bottom {
+      padding-bottom: 28px;
+    }
   }
 }
 
@@ -93,6 +125,18 @@
       align-items: baseline;
       flex-wrap: wrap;
       justify-content: space-between;
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    &--gray {
+      background-color: #f1f1f1;
+      padding-bottom: 23px;
+    }
+
+    &--box {
+      margin-top: 50px;
+      @include container;
     }
   }
 
@@ -108,6 +152,8 @@
 
 .order-form__lines--color .order-form__line {
   @media ($tablet) {
+    margin-bottom: 15px;
+
     &:nth-child(2n+1) {
       flex-basis: 262px;
     }
@@ -127,6 +173,7 @@
     display: flex;
     width: 500px;
     align-items: baseline;
+    margin-bottom: 24px;
   }
 
   @media ($desktop) {
@@ -286,6 +333,7 @@
 }
 
 .order-form__text {
+  background-color: transparent;
   box-sizing: border-box;
   width: 100%;
   border: 0;
@@ -299,6 +347,10 @@
     height: 142px;
     padding-top: 15px;
     border: 2px solid #000000;
+  }
+
+  @media ($tablet) {
+    padding-left: 14px;
   }
 }
 
@@ -361,8 +413,8 @@
 
 .order-form__submit {
   @media ($tablet) {
-    width: 228px;
-    margin-top: 40px;
+    width: 230px;
+    margin-top: 53px;
   }
 
   @media ($desktop) {
