--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -4,6 +4,10 @@
   @media ($tablet) {
     padding-top: 39px;
   }
+
+  @media ($desktop) {
+    padding-top: 39px;
+  }
 }
 
 .order-form__section {
@@ -39,7 +43,15 @@
   }
 
   @media ($desktop) {
-    padding-left: 60px;
+    padding-left: 112px;
+
+    &--name {
+      width: auto;
+    }
+
+    &--category {
+      width: auto;
+    }
   }
 }
 
@@ -87,6 +99,10 @@
     &::after {
       display: none;
     }
+  }
+
+  @media ($desktop) {
+    width: 113px
   }
 }
 
@@ -141,11 +157,19 @@
   }
 
   @media ($desktop) {
-    width: 815px;
+    width: 926px;
     justify-content: flex-start;
 
+    &--gray {
+      width: auto;
+    }
+
     &--small {
-      padding-left: 60px;
+      padding-left: 112px;
+    }
+
+    &--box {
+      padding-left: 0;
     }
   }
 }
@@ -164,7 +188,13 @@
   }
 
   @media ($desktop) {
-    width: 262px;
+    &:nth-child(2n+1) {
+      flex-basis: 262px;
+    }
+
+    &:nth-child(2n) {
+      flex-basis: 262px;
+    }
   }
 }
 
@@ -177,7 +207,7 @@
   }
 
   @media ($desktop) {
-    width: 640px;
+    width: 700px;
   }
 }
 
@@ -360,7 +390,7 @@
   }
 
   @media ($desktop) {
-    width: 640px;
+    width: 700px;
   }
 }
 
@@ -409,6 +439,10 @@
       display: none;
     }
   }
+
+  @media ($desktop) {
+    width: 113px;
+  }
 }
 
 .order-form__submit {
@@ -418,7 +452,8 @@
   }
 
   @media ($desktop) {
-    margin-left: 167px;
+    margin-left: 113px;;
+    margin-top: 49px;
   }
 }
 
@@ -436,5 +471,6 @@
 
   @media ($desktop) {
     margin-left: auto;
+    margin-right: 111px;
   }
 }
