--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -1,4 +1,5 @@
 .modal {
+  display: none;
   padding-top: 35px;
   padding-right: 30px;
   padding-bottom: 46px;
@@ -14,6 +15,10 @@
     border: 1px solid #c7c7c7;
     padding-top: 50px;
   }
+}
+
+.modal--visible {
+  display: block;
 }
 
 .modal__title {
