--- a/sass/blocks/to-cart.scss
+++ b/sass/blocks/to-cart.scss
@@ -47,6 +47,10 @@
   border: 2px solid #ececec;
   cursor: pointer;
 
+  &:hover {
+    border-color: #c7c7c7;
+  }
+
   @media ($tablet) {
     width: 108px;
   }
