--- a/sass/blocks/user-nav.scss
+++ b/sass/blocks/user-nav.scss
@@ -68,6 +68,14 @@
   }
 }
 
+.user-nav__link:hover {
+  opacity: 0.6;
+}
+
+.user-nav__link:active {
+  opacity: 0.3;
+}
+
 .user-nav__align-center {
   position: relative;
 
