--- a/sass/blocks/catalog-item.scss
+++ b/sass/blocks/catalog-item.scss
@@ -32,7 +32,17 @@
 .catalog-item__title {
   font-weight: bold;
   font-size: 17px;
+  line-height: 24px;
+  text-decoration: none;
   color: $color-text-title;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media ($tablet) {
     font-size: 20px;
@@ -100,6 +110,14 @@
   }
 }
 
+.catalog-item:hover .catalog-item__content {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+}
+
+.catalog-item:active .catalog-item__content {
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
 .catalog-item__info {
   width: 205px;
   margin: 0 auto;
@@ -162,6 +180,15 @@
   background-image: url("../img/icon-cart.svg");
   background-repeat: no-repeat;
   background-position: 100% 0;
+  opacity: 0.2;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media ($tablet) {
     display: block;
