--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -79,6 +79,14 @@
   }
 }
 
+.main-nav__link:hover {
+  opacity: 0.6;
+}
+
+.main-nav__link:active {
+  opacity: 0.3;
+}
+
 .main-nav__align-center {
   padding-left: 46px;
   display: block;
