--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -256,6 +256,7 @@
 
   &--radio {
     padding-top: 16px;
+    cursor: pointer;
 
     &::before {
       position: absolute;
@@ -292,6 +293,7 @@
   &--checkbox {
     padding-top: 20px;
     padding-bottom: 6px;
+    cursor: pointer;
 
     &::before {
       position: absolute;
@@ -354,6 +356,16 @@
   }
 }
 
+.order-form__label--radio:hover::before,
+.order-form__label--checkbox:hover::before  {
+  border-color: $color-cyan;
+}
+
+.order-form__label--radio:active::before,
+.order-form__label--checkbox:active::before  {
+  border-color: #c7c7c7;
+}
+
 .order-form__radio:checked ~ .order-form__label::after {
   display: block;
 }
@@ -371,12 +383,28 @@
   padding-bottom: 14px;
   padding-right: 40px;
   border-bottom: 2px solid #000000;
+  outline: none;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 17px;
+  font-weight: normal;
+  line-height: 24px;
+  color: #000000;
+
+  &:hover,
+  &:focus {
+    border-bottom: 2px solid $color-cyan;
+  }
 
   &--box {
     resize: none;
     height: 142px;
     padding-top: 15px;
     border: 2px solid #000000;
+
+    &:hover,
+    &:focus {
+      border: 2px solid $color-cyan;
+    }
   }
 
   @media ($tablet) {
