--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -49,10 +49,19 @@
   display: flex;
   flex-direction: column;
 
+  &:hover {
+    margin-top: -5px;
+  }
+
   @media ($tablet) {
     flex-direction: row;
     @include container;
     font-size: 0;
+    align-items: flex-start;
+
+    &:hover {
+      margin-top: 0;
+    }
   }
 }
 
@@ -67,6 +76,10 @@
   line-height: 24px;
   color: #ffffff;
   text-decoration: none;;
+
+  &:hover {
+    padding-bottom: 35px;
+  }
 
   &--interior {
     background-color: $color-cyan;
@@ -84,7 +97,20 @@
     width: 50%;
     padding-bottom: 38px;
     padding-top: 28px;
+
+    &:hover {
+      padding-bottom: 43px;
+      margin-top: -5px;
+    }
   }
+}
+
+.promo__link:hover .promo__align-center {
+  opacity: 0.7;
+}
+
+.promo__link:active .promo__align-center {
+  opacity: 0.3;
 }
 
 .promo__align-center {
