--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -168,6 +168,14 @@
     background-position: center;
   }
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media ($tablet) {
     border: 0;
   }
