--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -20,8 +20,25 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  @media #{$retina} {
+    background-image: url("../img/map-mobile@2x.jpg");
+  }
+
+  @media ($tablet) {
+    background-image: url("../img/map-tablet@1x.jpg");
+
+    @media #{$retina} {
+      background-image: url("../img/map-tablet@2x.jpg");
+    }
+  }
+
   @media ($desktop) {
+    background-image: url("../img/map-desktop@1x.jpg");
     width: 525px;
     margin: 0;
+
+    @media #{$retina} {
+      background-image: url("../img/map-desktop@2x.jpg");
+    }
   }
 }
