--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -13,11 +13,20 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  @media #{$retina} {
+    background-image: url("../img/video-mobile@2x.jpg");
+  }
+
   @media ($tablet) {
     order: -1;
     width: 668px;
     height: 455px;
     margin-bottom: 39px;
+    background-image: url("../img/video-tablet@1x.jpg");
+
+    @media #{$retina} {
+      background-image: url("../img/video-tablet@2x.jpg");
+    }
   }
 
   @media ($desktop) {
@@ -25,6 +34,11 @@
     height: 455px;
     margin-right: 22px;
     margin-bottom: 0;
+    background-image: url("../img/video-desktop@1x.jpg");
+
+    @media #{$retina} {
+      background-image: url("../img/video-desktop@2x.jpg");
+    }
   }
 }
 
