--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -6,9 +6,18 @@
   background-repeat: no-repeat;
   background-position: center -20px;
 
+  @media #{$retina} {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
+
   @media ($tablet) {
     padding-top: 97px;
+    background-image: url("../img/hero-desktop@1x.jpg");
     background-size: cover;
+
+    @media #{$retina} {
+      background-image: url("../img/hero-desktop@2x.jpg");
+    }
   }
 
   @media ($desktop) {
