--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,3 +6,4 @@ $color-cyan: rgba(99, 209, 187, 1);
 
 $tablet: "min-width: 768px";
 $desktop: "min-width: 1150px";
+$retina: "(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
