--- a/sass/blocks/catalog-item.scss
+++ b/sass/blocks/catalog-item.scss
@@ -138,6 +138,7 @@
 .catalog-item__order {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   width: 205px;
   margin: 0 auto;
@@ -157,6 +158,7 @@
 
 .catalog-item__price {
   width: 105px;
+  flex-grow: 1;
 
   font-weight: bold;
   font-size: 15px;
@@ -172,14 +174,9 @@
 
 .catalog-item__cart {
   display: block;
-  width: 100px;
   height: 19px;
 
   font-size: 0;
-
-  background-image: url("../img/icon-cart.svg");
-  background-repeat: no-repeat;
-  background-position: 100% 0;
   opacity: 0.2;
 
   &:hover {
@@ -189,13 +186,8 @@
   &:active {
     opacity: 0.3;
   }
+}
 
-  @media ($tablet) {
-    display: block;
-    width: 135px;
-  }
-
-  @media ($desktop) {
-    width: 115px;
-  }
+.catalog-item__cart:hover path {
+  fill: #46c1ae;
 }
