--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -1,9 +1,31 @@
 .features {
+  position: relative;
   padding-top: 68px;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 35px;
+    width: 100%;
+    height: 7px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: contain;
+    background-repeat: repeat-x;
+  }
 
   @media ($tablet) {
     margin-bottom: 30px;
     padding-top: 53px;
+
+    &:before {
+      height: 17px;
+    }
+  }
+
+  @media ($desktop) {
+    &:before {
+      height: 23px;
+    }
   }
 }
 
