--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -1,10 +1,21 @@
 .promo {
+  position: relative;
   padding-top: 70px;
 
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -20px;
+
+  &:after {
+    display: none;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 24px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+  }
 
   @media #{$retina} {
     background-image: url("../img/hero-mobile@2x.jpg");
@@ -15,6 +26,10 @@
     background-image: url("../img/hero-desktop@1x.jpg");
     background-size: cover;
 
+    &:after {
+      display: block;
+    }
+
     @media #{$retina} {
       background-image: url("../img/hero-desktop@2x.jpg");
     }
@@ -22,6 +37,10 @@
 
   @media ($desktop) {
     background-position: center -80px;
+
+    &:after {
+      height: 34px;
+    }
   }
 }
 
