--- a/sass/blocks/social-link.scss
+++ b/sass/blocks/social-link.scss
@@ -3,33 +3,12 @@
   margin-right: 37px;
 
   vertical-align: top;
+}
 
-  &--insta {
-    width: 21px;
-    height: 21px;
-    margin-left: -11px;
+.social-link:hover path {
+  fill: #46c1ae;
+}
 
-    background-image: url("../img/icon-insta.svg");
-    background-repeat: no-repeat;
-  }
-
-  &--fb {
-    width: 15px;
-    height: 27px;
-    margin-top: -4px;
-    margin-left: 6px;
-
-    background-image: url("../img/icon-fb.svg");
-    background-repeat: no-repeat;
-  }
-
-  &--tw {
-    width: 23px;
-    height: 20px;
-    margin-right: 0;
-    margin-left: 1px;
-
-    background-image: url("../img/icon-twitter.svg");
-    background-repeat: no-repeat;
-  }
+.social-link:active {
+  opacity: 0.3;
 }
